DuPont DevSB/src/objects/Loop__DDP_Integration_Option__c.object
<CustomObject>
    <description>Delivery Options for Document Packages</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loop__Agreement_Name__c</fullName>
        <inlineHelpText>If left blank, the file name of the PDF will be used.</inlineHelpText>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__AllowOutputAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows the user to choose to store the DDP based on the Attach As field.</inlineHelpText>
        <label>Allow Document Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Attach_As__c</fullName>
        <inlineHelpText>Attachment will create a Salesforce attachment; LOOP Storage will create a document in the LOOP Storage interface; Content and Content - User Selected will create a Content document in the appropriate Workspace.</inlineHelpText>
        <label>Store As</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>LOOP Storage</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Content - User Selected</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>SpringCM</fullName>
                </value>
                <value>
                    <fullName>Veeva Vault</fullName>
                </value>
                <value>
                    <fullName>Office 365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Authoritative_Copy__c</fullName>
        <inlineHelpText>None or Default will use the default Authoritative Copy setting specified in your DocuSign account configuration.</inlineHelpText>
        <label>Authoritative Copy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Standard Copy</fullName>
                </value>
                <value>
                    <fullName>Authoritative Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Brand_Id__c</fullName>
        <label>Brand Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__CC__c</fullName>
        <label>Email a Copy to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__CI_Additional_To__c</fullName>
        <inlineHelpText>This will default the &apos;Additional To&apos; field when delivering the DDP via email. Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
        <label>Additional To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__CI_BCC__c</fullName>
        <inlineHelpText>This will default the &apos;BCC&apos; field when delivering the DDP via email. Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
        <label>BCC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__CI_CC__c</fullName>
        <inlineHelpText>This will default the &apos;CC&apos; field when delivering the DDP via email. Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
        <label>CC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Content_Workspace__c</fullName>
        <formula>IF ( OR( ISPICKVAL( Loop__Attach_As__c , &quot;Content&quot;) , ISPICKVAL( Loop__Attach_As__c , &quot;Content - User Selected&quot;) ) , IF ( Loop__WorkspaceId__c = &quot;&quot; , &quot;Personal&quot; , HYPERLINK(&quot;/&quot; &amp;  Loop__WorkspaceId__c , IF ( Loop__WorkspaceName__c = &quot;&quot; , Loop__WorkspaceId__c , Loop__WorkspaceName__c ) ) ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpContentWorkspace?type=workspace&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; , &quot;None&quot;)</formula>
        <label>Content Library</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DDP_File_Template__c</fullName>
        <label>DDP File Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>Document Package</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipName>Custom_Integration_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Data_Mapping_Id__c</fullName>
        <label>Data Mapping Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Data_Mapping_Name__c</fullName>
        <label>Data Mapping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Data_Mapping__c</fullName>
        <formula>IF( ISBLANK( Loop__Data_Mapping_Id__c ) , &quot;None&quot; ,  HYPERLINK(&quot;/&quot; &amp; Loop__Data_Mapping_Id__c ,  IF( ISBLANK( Loop__Data_Mapping_Name__c ) , &quot;Mapping&quot; ,  Loop__Data_Mapping_Name__c )  ) ) 
&amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=dataMapping&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
        <label>Data Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Decryption_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Decryption is currently only supported with CipherCloud. Contact Drawloop to enable this for your organization.</description>
        <inlineHelpText>Decryption is currently only supported with CipherCloud. Contact Drawloop to enable this for your organization.</inlineHelpText>
        <label>Decryption Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Delivery_Data__c</fullName>
        <label>Delivery Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Description_Hover__c</fullName>
        <inlineHelpText>Text entered here will be displayed when users hover over this option&apos;s info icon.</inlineHelpText>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Email_Doc_Links__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You can use Box share links in your email templates. Use the appropriate tags from the Field Tagger.</inlineHelpText>
        <label>Use Box Links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Email_Template__c</fullName>
        <formula>IF(Loop__Template__c=&quot;&quot;, IF( RecordType.DeveloperName = &quot;SMTPService&quot;, &quot;Use Subject and Email Text fields below or &quot;, &quot;&quot; ) &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?cioId=&quot; &amp; Id &amp; &quot;&amp;ddpId=&quot; &amp; Loop__DDP__c, &quot;Select Email Template&quot;,&quot;_self&quot;),IF(BEGINS(Loop__Template__c,&quot;00X&quot;), HYPERLINK(&quot;/&quot; &amp; Loop__Template__c &amp; &quot;/s?id=&quot; &amp; Loop__Template__c &amp; &quot;&amp;previewMode=1&quot;, IMAGE(&quot;/img/icon/mail16.png&quot;, &quot;Preview&quot;) &amp; &quot; Preview&quot;,&quot;_blank&quot;), HYPERLINK(&quot;/&quot; &amp; Loop__DDP_File_Template__c, IMAGE(&quot;/img/icon/mail16.png&quot;, &quot;Preview&quot;) &amp; &quot; Preview&quot;,&quot;_blank&quot;)) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?cioId=&quot; &amp; Id &amp; &quot;&amp;ddpId=&quot; &amp; Loop__DDP__c, &quot;[Change]&quot;,&quot;_self&quot;)&amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?cioId=&quot; &amp; Id &amp; &quot;&amp;ic=None&quot;, &quot;[None]&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Enable_Revisions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow 1st recipient to suggest revisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Encrypted_Token__c</fullName>
        <label>Encrypted Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__EnforceSignerVisibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Signer Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__FTPDomain__c</fullName>
        <inlineHelpText>The FTP domain where you wish to store the document including any subfolders (e.g. ftp.yoursite.com/folder1/folder2/). The folders can be made dynamic using the Field Tagger.</inlineHelpText>
        <label>FTP Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__FTPUserName__c</fullName>
        <inlineHelpText>The user name for your FTP domain.</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__FTP__c</fullName>
        <formula>IF( OR( ISPICKVAL( Loop__Attach_As__c , &quot;FTP&quot;), ISPICKVAL( Loop__Attach_As__c , &quot;SFTP&quot;) ) ,  IF( OR( ISBLANK( Loop__FTPDomain__c ) , ISBLANK( Loop__FTPUserName__c ) ) , &quot;None&quot; , Loop__FTPUserName__c &amp; &quot; @ &quot; &amp; IF( ISPICKVAL( Loop__Attach_As__c , &quot;SFTP&quot;), &quot;s&quot;, &quot;&quot;) &amp; &quot;ftp&quot; &amp; IF( Loop__SSL__c , &quot;s&quot; , &quot;&quot; ) &amp; &quot;://&quot; &amp; Loop__FTPDomain__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__smtpPassword?ftp=true&amp;id=&quot; &amp; Id &amp; IF( ISPICKVAL( Loop__Attach_As__c , &quot;SFTP&quot;), &quot;&amp;sftp=true&quot;, &quot;&quot;) , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; , &quot;None&quot; )</formula>
        <label>FTP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__HTML_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option if your Email Text includes HTML markup.</inlineHelpText>
        <label>HTML Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Host Signing for the First Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Internal_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this option will remove the contact or lead reference on the email page.</inlineHelpText>
        <label>Internal Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                    <label>English (United States)</label>
                </value>
                <value>
                    <fullName>French (France)</fullName>
                </value>
                <value>
                    <fullName>German (Germany)</fullName>
                </value>
                <value>
                    <fullName>Russian (Russia)</fullName>
                </value>
                <value>
                    <fullName>Italian (Italy)</fullName>
                </value>
                <value>
                    <fullName>Dutch (Netherlands)</fullName>
                </value>
                <value>
                    <fullName>Finnish (Finland)</fullName>
                </value>
                <value>
                    <fullName>Danish (Denmark)</fullName>
                </value>
                <value>
                    <fullName>Swedish (Sweden)</fullName>
                </value>
                <value>
                    <fullName>Spanish (Spain)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Norway)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Portugal)</fullName>
                </value>
                <value>
                    <fullName>Icelandic (Iceland)</fullName>
                </value>
                <value>
                    <fullName>Japanese (Japan)</fullName>
                </value>
                <value>
                    <fullName>Chinese Simplified (China)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Limit_Availability__c</fullName>
        <label>Limit Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Mass Only</fullName>
                </value>
                <value>
                    <fullName>Mass Only</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__OrgWideEmailAddress__c</fullName>
        <label>OrgWideEmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OrgWideEmailId__c</fullName>
        <label>Org-Wide Email Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__OrgWideEmailName__c</fullName>
        <label>OrgWideEmailName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Org_Wide_Email__c</fullName>
        <formula>IF( ISBLANK( Loop__OrgWideEmailId__c ) ,
    IF( RecordType.DeveloperName = &apos;SMTPService&apos;,
        IF( ISBLANK( Loop__OrgWideEmailName__c ),
            IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
                &quot;None&quot;,
                Loop__OrgWideEmailAddress__c ) ,
            Loop__OrgWideEmailName__c
                &amp; &quot; (&quot;
                &amp; IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
                    Loop__SMTPUserName__c ,
                    Loop__OrgWideEmailAddress__c )
                &amp; &quot;)&quot; ),
        &quot;None&quot; ),
    IF( ISBLANK( Loop__OrgWideEmailName__c ),
        IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
            Loop__OrgWideEmailId__c,
            Loop__OrgWideEmailAddress__c ),
        IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
            Loop__OrgWideEmailName__c,
            Loop__OrgWideEmailName__c
                &amp; &quot; (&quot;
                &amp; Loop__OrgWideEmailAddress__c
                &amp; &quot;)&quot; ) ) )
&amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=orgwideemail&amp;cioId=&quot; &amp; Id, &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
        <label>Org-Wide Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Output__c</fullName>
        <label>Document Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                    <default>true</default>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>Separate PDFs</fullName>
                </value>
                <value>
                    <fullName>Originals</fullName>
                </value>
                <value>
                    <fullName>PDF and Originals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__PDF_Option__c</fullName>
        <inlineHelpText>If no option is selected, the default is Enhanced.</inlineHelpText>
        <label>PDF Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Loop__Output__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>PDF/A</fullName>
                </value>
                <value>
                    <fullName>PDF/A Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Password__c</fullName>
        <inlineHelpText>Use the Field Tagger to make this value dynamic.</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__PasswordonPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password required to view PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__PasswordtoSign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password required to sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__PostParameters__c</fullName>
        <inlineHelpText>Format the parameters as if on a query string (paramName=smplVal&amp;p2=sV2). This can be made dynamic using tags from the Field Tagger.</inlineHelpText>
        <label>Post Parameters</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Preview_Step_Help_Text__c</fullName>
        <inlineHelpText>Text entered here will be displayed if there is a preview step.</inlineHelpText>
        <label>Preview Step Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Queue_Folder_Id__c</fullName>
        <label>Queue Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Redirect_URL__c</fullName>
        <inlineHelpText>A URL used to redirect 3rd party processes.</inlineHelpText>
        <label>Redirect URL</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Remind_Recipient__c</fullName>
        <label>Remind Recipient to Sign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Every Day, Until Signed</fullName>
                </value>
                <value>
                    <fullName>Every Week, Until Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__RequireOutputAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The DDP file will be stored in Salesforce as an attachment, activity history, or LOOP Storage document on the originating object.</inlineHelpText>
        <label>Require Document Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__SMTPDomain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__SMTPUserName__c</fullName>
        <label>User Name</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loop__SMTP_Password__c</fullName>
        <formula>&quot;***** [&quot; &amp; HYPERLINK(&quot;/apex/loop__smtpPassword?id=&quot; &amp; Id, &quot;Change&quot;, &quot;_top&quot;) &amp; &quot;]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__SSL__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, the transfer will be done over SSL.</inlineHelpText>
        <label>Secure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__SenderSigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I also need to sign this document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Signature_Order__c</fullName>
        <label>Signature Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipient signs, then I sign</fullName>
                </value>
                <value>
                    <fullName>I sign, then the Recipient signs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Signature_Type__c</fullName>
        <label>Signature Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>e-Signature</fullName>
                    <default>true</default>
                    <label>e-Signature</label>
                </value>
                <value>
                    <fullName>Written Signature</fullName>
                </value>
                <value>
                    <fullName>Print, Sign, Fax</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__SkipPreview__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically send the DDP to its destination (no PDF preview).</inlineHelpText>
        <label>Auto Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Storage_Data__c</fullName>
        <label>Storage Data</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Storage_Folder__c</fullName>
        <inlineHelpText>Type the folder structure for where you want to store the output. You can use the Field Tagger to dynamically determine your folders. Example: folder/sub folder/last folder</inlineHelpText>
        <label>Storage Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Storage_Location__c</fullName>
        <formula>IF(
    OR(ISPICKVAL(Loop__Attach_As__c,&quot;FTP&quot;),ISPICKVAL(Loop__Attach_As__c,&quot;SFTP&quot;)),
    Loop__FTP__c,
    IF(
        OR(ISPICKVAL(Loop__Attach_As__c,&quot;Content&quot;),ISPICKVAL(Loop__Attach_As__c,&quot;Content - User Selected&quot;)),
        Loop__Content_Workspace__c,
        IF(
            ISPICKVAL(Loop__Attach_As__c,&quot;Veeva Vault&quot;),
            &quot;Vault Options [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=storageData&amp;cioId=&quot; &amp; Id, &quot;Change&quot;, &quot;_self&quot;) &amp; &quot;]&quot;,
            IF(
                NOT(ISBLANK(TEXT(Loop__Attach_As__c))),
                IF(ISBLANK( Loop__Storage_Folder__c ), &quot;Root&quot;, Loop__Storage_Folder__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=storageFolder&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Storage Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Tag_Before_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This option allows the user to add or move signatures and other signing options on the file before sending out to the recipients.</inlineHelpText>
        <label>Signing Preview and Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Template__c</fullName>
        <description>Email template id</description>
        <label>Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__TurnTrackingOn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If returning an original Word document, this option will turn on tracking within the file.</inlineHelpText>
        <label>Turn Tracking On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Postcard</fullName>
                </value>
                <value>
                    <fullName>Area Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Wait__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If unchecked, the user does not see the processing screen while the DDP is being generated.</inlineHelpText>
        <label>Wait for document to process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__WorkspaceId__c</fullName>
        <label>WorkspaceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__WorkspaceName__c</fullName>
        <label>WorkspaceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsAllowEmailCustomizations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, users will be able to change the subject and email text when running a DDP.</inlineHelpText>
        <label>Allow Subject and Email Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsCustomFields__c</fullName>
        <inlineHelpText>This is a comma-semicolon delimited string: each field separated by a semicolon, each parameter per field separated by a comma. Example: &quot;custmFld1Name, custmFld1Val; custmFld2Name, &lt;&lt;Account_Id&gt;&gt;&quot;. This value is dynamic, see the DDP Output Filename help.</inlineHelpText>
        <label>Custom Envelope Fields</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__dsEmailText__c</fullName>
        <inlineHelpText>Use the Field Tagger to make this dynamic.</inlineHelpText>
        <label>Email Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__dsExpireAfter__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Expire signing in # days. 0 days will never expire.</inlineHelpText>
        <label>Days till Signing Expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__dsExpireWarn__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Warn of expiration # days prior to expiration.</inlineHelpText>
        <label>Warn of Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__dsExposeExpirations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, the user will be able to change the defaults for the expirations and reminders.</inlineHelpText>
        <label>Allow Remind and Expire Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsReminderDelay__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Send Reminder in # days. 0 days will not send a reminder.</inlineHelpText>
        <label>Reminder Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__dsReminderFrequency__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Repeat reminder every # days until complete.</inlineHelpText>
        <label>Reminder Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__dsSubject__c</fullName>
        <inlineHelpText>Use the Field Tagger to make this dynamic. Examples: &quot;Quote &lt;&lt;Opportunity_Quote_Num&gt;&gt;&quot; or &quot;&lt;&lt;Account_Name&gt;&gt; Proposal&quot;.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsTemplateId__c</fullName>
        <inlineHelpText>The Template Id from the DocuSign Console. When using a Template Id, the roles of the recipients in the template must match the roles of the recipients in the related list below.</inlineHelpText>
        <label>Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Delivery Option</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Options</pluralLabel>
    <recordTypes>
        <fullName>Loop__Attach</fullName>
        <active>true</active>
        <description>Allows you to run a Document Package to be attached to an object.</description>
        <label>Attach</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__ContentDelivery</fullName>
        <active>true</active>
        <description>Create an option to route this Document Package to Content Delivery</description>
        <label>Content Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__DocuSign</fullName>
        <active>true</active>
        <description>Create an option to route this Document Package to DocuSign</description>
        <label>DocuSign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Document_Queue</fullName>
        <active>true</active>
        <description>Allows the Document Package to be sent to the Document Queue tab</description>
        <label>Document Queue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Download</fullName>
        <active>true</active>
        <description>Create an option to download this Document Package</description>
        <label>Download</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__EchoSign</fullName>
        <active>false</active>
        <description>Create an option to route this Document Package to Adobe Sign</description>
        <label>Adobe Sign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Email</fullName>
        <active>true</active>
        <description>Create an alternative email option to route the Document Package to</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__HTTP_Service</fullName>
        <active>true</active>
        <description>Create an option to route this Document Package to any HTTP Service</description>
        <label>HTTP Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__LOOP</fullName>
        <active>true</active>
        <description>Allows the Document Package to be sent to the LOOP tab</description>
        <label>LOOP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Lob</fullName>
        <active>true</active>
        <description>Create an option to route this Document Package to Lob</description>
        <label>Lob</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__NWC_External_Start</fullName>
        <active>true</active>
        <description>Create an option to route this Document Package to a Nintex Workflow Cloud External Start workflow</description>
        <label>Start Nintex Workflow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__SMTPService</fullName>
        <active>true</active>
        <description>Create an option to automatically email this Document Package through a 3rd party email account</description>
        <label>SMTP Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Sertifi</fullName>
        <active>true</active>
        <description>Create an option to route this Document Package to Sertifi</description>
        <label>Sertifi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__SignNow</fullName>
        <active>true</active>
        <description>Create an option to route this Document Package to SignNow</description>
        <label>SignNow</label>
    </recordTypes>
</CustomObject>